fix: ensure proper color for current month options in dark mode

--- a/src/assets/flatpickr-tailwind.css
+++ b/src/assets/flatpickr-tailwind.css
@@ -31,3 +31,6 @@
 .dark .numInputWrapper span.arrowDown::after{
  border-top-color: color-mix(in oklab, currentColor 20%, transparent) !important;
 }
+.dark .flatpickr-current-month select option{
+  color: var(--color-black);
+}
